added link in index

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <ul>
+      <li><a href="SMI-seq_test.html">SMI-seq_test</a></li>
       <li><a href="basic.html">view TIFF files</a></li>
       <li><a href="worker.html">view a TIFF file by using web worker</a></li>
       <li><a href="multipage.html">view a multipage TIFF file</a></li>
